--- a/Main/index.html
+++ b/Main/index.html
@@ -10,7 +10,10 @@
     <body>
         <!-- Header section with links -->
         <div class="header">
-            <h1>Horiseon</h1>
+            <h1>Hori
+                <span class="seo">seo</span>
+                n
+            </h1>
             <div>
                 <ul>
                     <li>
