--- a/Main/index.html
+++ b/Main/index.html
@@ -10,10 +10,7 @@
     <body>
         <!-- Header section with links -->
         <div class="header">
-            <h1>Hori
-                <span class="seo">seo</span>
-                n
-            </h1>
+            <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
                 <ul>
                     <li>
